Functionality , bugfixes., quality update.